--- a/index.css
+++ b/index.css
@@ -4,4 +4,13 @@ body {
 
 h1 {
     color: white;
+    transition: color 0.5s ease-in-out;
+}
+
+.clicked {
+    color: gray;
+}
+
+.ptn {
+    cursor: pointer;
 }
