--- a/index.css
+++ b/index.css
@@ -1,16 +1,16 @@
 body {
-    background-color: rgb(79, 28, 146);
+    background-color: rgb(195, 165, 235);
 }
 
 h1 {
     color: white;
-    transition: color 0.5s ease-in-out;
 }
 
-.clicked {
-    color: gray;
+.form,
+.greetings {
+    display: none;   
 }
 
-.ptn {
-    cursor: pointer;
+.showing {
+    display: block;
 }
