--- a/index.css
+++ b/index.css
@@ -1,10 +1,41 @@
 body {
-    background-color: rgb(195, 165, 235);
+    background-color:#2c3e50;
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-h1 {
-    color: white;
+body div,
+body form,
+body span {
+  width:100%;
+  height: 100%;
 }
+
+.js-clock {
+    font-size: 40px;
+
+}
+
+.js-greetings {
+  font-size: 30px;
+
+}
+
+.js-toDoForm {
+  font-size: 20px;
+
+}
+
+.js-toDoList {
+  font-size: 20px;
+
+}
+
+.js-weather {
+  font-size: 30px;
+}
+
 
 .form,
 .greetings {
@@ -13,4 +44,23 @@ h1 {
 
 .showing {
     display: block;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation:fadeIn 3s linear;
 }
